2008-06-17  Timothy Hatcher  <timothy@apple.com>

        Removed duplicate implementations of setTabIndex. They all matched
        the HTMLElement::setTabIndex implementation.

        Reviewed by Sam Wenig.

        * html/HTMLAnchorElement.cpp: Removed setTabIndex.
        * html/HTMLAreaElement.cpp: Ditto.
        * html/HTMLFormControlElement.cpp: Ditto.
        * html/HTMLFormControlElement.h: Ditto.
        * html/HTMLObjectElement.cpp: Ditto.
        * html/HTMLObjectElement.h: Ditto.

2008-06-17  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - more of https://bugs.webkit.org/show_bug.cgi?id=17257
          start ref counts at 1 instead of 0 for speed

        Change StyleBase and all classes derived from it.

        * bindings/js/JSRGBColor.cpp:
        (WebCore::JSRGBColor::getValueProperty):
        * bindings/objc/DOMRGBColor.mm:
        (-[DOMRGBColor red]):
        (-[DOMRGBColor green]):
        (-[DOMRGBColor blue]):
        (-[DOMRGBColor alpha]):
        * css/CSSBorderImageValue.cpp:
        (WebCore::CSSBorderImageValue::cssText):
        * css/CSSBorderImageValue.h:
        (WebCore::CSSBorderImageValue::create):
        * css/CSSCanvasValue.h:
        (WebCore::CSSCanvasValue::create):
        (WebCore::CSSCanvasValue::setName):
        (WebCore::CSSCanvasValue::CSSCanvasValue):
        * css/CSSCharsetRule.cpp:
        (WebCore::CSSCharsetRule::CSSCharsetRule):
        * css/CSSCharsetRule.h:
        (WebCore::CSSCharsetRule::create):
        (WebCore::CSSCharsetRule::encoding):
        (WebCore::CSSCharsetRule::isCharsetRule):
        (WebCore::CSSCharsetRule::type):
        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::valueForShadow):
        (WebCore::valueForNinePieceImage):
        (WebCore::valueForReflection):
        (WebCore::getPositionOffsetValue):
        (WebCore::currentColorOrValidColor):
        (WebCore::getBorderRadiusCornerValue):